--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.junit.jupiter', name: 'junit', version: '4.12'
     testCompile group: 'io.rest-assured', name: 'rest-assured', version: '4.1.0'
     testCompile group: 'io.rest-assured', name: 'json-schema-validator', version: '4.1.0'
     testCompile group: 'io.rest-assured', name: 'json-path', version: '4.1.0'
